--- a/fyd/static/css/main.css
+++ b/fyd/static/css/main.css
@@ -13,19 +13,28 @@ h1 {
   border: 5px solid black;
 }
 form {
-
+  text-align:center;
 }
-form input {
+form label {
+  font-size:23px;
+  padding:5px 2px;
+  font-weight:bold;
+}
+form input, form select {
   padding:5px;
   margin:10px auto;
   text-align:center;
-  width:500px;
+  width:600px;
   font-size:20px;
   height:50px;
   border:2px solid black;
   background-color:#fff;
   color:#333;
   display:block;
+}
+form select {
+  width:200px;
+  display:inline-block;
 }
 form input[type=submit] {
   cursor:pointer;
